[gd_scene load_steps=44 format=3 uid="uid://m7jjpmhaawdh"]

[ext_resource type="PackedScene" uid="uid://c7fme73utoj8r" path="res://Scenes/Player.tscn" id="1_q75nt"]
[ext_resource type="Script" uid="uid://do6hxa3isqpqx" path="res://Scripts/GameWorld.gd" id="1_ui0sf"]
[ext_resource type="PackedScene" uid="uid://demqt51ot5psy" path="res://Scenes/Props/ConcreteBlock.tscn" id="2_cllky"]
[ext_resource type="Texture2D" uid="uid://b1mcylrhg82dd" path="res://Assets/Textures/Ground037_256-PNG_Color.png" id="3_rpegc"]
[ext_resource type="PackedScene" uid="uid://cr2nw7rtpcavj" path="res://Scenes/BulletHole.tscn" id="4_30f34"]
[ext_resource type="Texture2D" uid="uid://ba1047cgugaw1" path="res://Assets/Textures/Ground037_256-PNG_NormalGL.png" id="4_xtikl"]
[ext_resource type="Texture2D" uid="uid://dt7cyh1jthtp4" path="res://Assets/Textures/Ground031_256-PNG_Color.png" id="5_k07wl"]
[ext_resource type="Texture2D" uid="uid://bk85tg3mktayx" path="res://Assets/Textures/Ground031_256-PNG_NormalGL.png" id="6_kycso"]
[ext_resource type="Shader" uid="uid://705mddt8cnpr" path="res://Scenes/WaterShader.gdshader" id="8_k07wl"]
[ext_resource type="Texture2D" uid="uid://dq654mwhu7ne" path="res://Assets/Textures/Two_lanes_road_texture.png" id="8_n0d5i"]
[ext_resource type="Shader" uid="uid://b36bp6qb3b776" path="res://Scripts/FenceShader.gdshader" id="9_hfae5"]
[ext_resource type="Texture2D" uid="uid://csclo1k4n5vb7" path="res://Assets/Textures/Fence008A_256_Color.png" id="10_clku2"]
[ext_resource type="Texture2D" uid="uid://ciwmxovfgk1ft" path="res://Assets/Textures/Fence008A_256_NormalGL.png" id="11_oavat"]
[ext_resource type="Texture2D" uid="uid://bf31a4pq3w6r5" path="res://Assets/Textures/Fence008A_256_Opacity.png" id="12_n0d5i"]
[ext_resource type="Script" uid="uid://duw537farqvfb" path="res://addons/road-generator/nodes/road_manager.gd" id="13_cllky"]
[ext_resource type="Script" uid="uid://b88uilprtp72h" path="res://addons/road-generator/nodes/road_container.gd" id="15_ytq2i"]
[ext_resource type="Script" uid="uid://ccq2mgglnelky" path="res://addons/road-generator/nodes/road_point.gd" id="16_4qruq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tr2i4"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_nhkr4"]
sky_material = SubResource("ProceduralSkyMaterial_tr2i4")

[sub_resource type="Environment" id="Environment_7rqgy"]
background_mode = 2
sky = SubResource("Sky_nhkr4")
glow_normalized = true
fog_light_color = Color(0.676897, 0.784936, 0.856733, 1)
fog_density = 0.02
volumetric_fog_albedo = Color(0.676897, 0.784936, 0.856733, 1)

[sub_resource type="Gradient" id="Gradient_ui0sf"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tnnpc"]
noise_type = 2
frequency = 0.03
cellular_jitter = 3.0
cellular_return_type = 0
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 50.0
domain_warp_fractal_type = 2
domain_warp_fractal_lacunarity = 1.5
domain_warp_fractal_gain = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ywpc4"]
width = 256
height = 256
seamless = true
color_ramp = SubResource("Gradient_ui0sf")
noise = SubResource("FastNoiseLite_tnnpc")

[sub_resource type="Terrain3DMaterial" id="Terrain3DMaterial_llaiv"]
_shader_parameters = {
&"auto_base_texture": 1,
&"auto_height_reduction": 0.1,
&"auto_overlay_texture": 0,
&"auto_slope": 1.0,
&"bias_distance": 512.0,
&"blend_sharpness": 0.1,
&"depth_blur": 0.0,
&"dual_scale_far": 170.0,
&"dual_scale_near": 100.0,
&"dual_scale_reduction": 0.3,
&"dual_scale_texture": 0,
&"enable_macro_variation": false,
&"enable_projection": true,
&"flat_terrain_normals": false,
&"macro_variation1": Color(0.676897, 0.784936, 0.856733, 1),
&"macro_variation2": Color(1, 1, 1, 1),
&"macro_variation_slope": 0.1,
&"mipmap_bias": 1.0,
&"noise1_angle": 0.0,
&"noise1_offset": Vector2(0.5, 0.5),
&"noise1_scale": 0.04,
&"noise2_scale": 0.076,
&"noise_texture": SubResource("NoiseTexture2D_ywpc4"),
&"projection_threshold": 0.8,
&"tri_scale_reduction": 0.3
}
world_background = 0
texture_filtering = 1
auto_shader = true
dual_scaling = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0d5i"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_cllky"]
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_n0d5i")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_30f34"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_ytq2i"]
name = "Bush"
id = 1
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_30f34")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_hfae5"]
name = "Ground037_256-PNG_Color"
albedo_texture = ExtResource("3_rpegc")
normal_texture = ExtResource("4_xtikl")

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_w0qho"]
name = "Ground031_256-PNG_Color"
id = 1
albedo_texture = ExtResource("5_k07wl")
normal_texture = ExtResource("6_kycso")

[sub_resource type="Terrain3DAssets" id="Terrain3DAssets_clku2"]
mesh_list = Array[Terrain3DMeshAsset]([SubResource("Terrain3DMeshAsset_cllky"), SubResource("Terrain3DMeshAsset_ytq2i")])
texture_list = Array[Terrain3DTextureAsset]([SubResource("Terrain3DTextureAsset_hfae5"), SubResource("Terrain3DTextureAsset_w0qho")])

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cllky"]
albedo_texture = ExtResource("8_n0d5i")
texture_filter = 4

[sub_resource type="BoxMesh" id="BoxMesh_53j0q"]
size = Vector3(20, 0.5, 20)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_53j0q"]
points = PackedVector3Array(-10, -0.25, -10, -10, 0.25, -10, 10, -0.25, -10, -10, -0.25, 10, -10, 0.25, 10, 10, 0.25, -10, 10, -0.25, 10, 10, 0.25, 10)

[sub_resource type="BoxMesh" id="BoxMesh_tnnpc"]
size = Vector3(3, 3, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ywpc4"]
points = PackedVector3Array(1.5, 1.5, 0.25, 1.5, 1.5, -0.25, -1.5, 1.5, 0.25, 1.5, -1.5, 0.25, 1.5, -1.5, -0.25, -1.5, 1.5, -0.25, -1.5, -1.5, 0.25, -1.5, -1.5, -0.25)

[sub_resource type="Curve3D" id="Curve3D_hfae5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 203.561, 18.7906, -125.575, 37.7878, -16.5991, -0.6259, -37.7878, 16.5991, 0.6259, 86.73, 32.0273, -110.983, -4.09274, -6.99587, -28.4976, 4.09274, 6.99587, 28.4976, 38.9073, 45.3314, -50.1523, -5.82892, 15.1826, -48.3019, 5.82892, -15.1826, 48.3019, 91.2577, 37.5581, 28.9545, 24.1923, 1.47863, -6.63731, -24.1923, -1.47863, 6.63731, 24.5538, 34.879, 160.045, 44.1931, -20.6136, 24.2306, -44.1931, 20.6136, -24.2306, -117.232, 32.0145, 123.616, 6.311, -10.9593, 30.103, -6.311, 10.9593, -30.103, -195.94, 41.5835, -27.3758, 0, 0, 0, 0, 0, 0, -188.741, 66.2866, -126.931),
"tilts": PackedFloat32Array(0, -0.73035, -0.380655, 0, 0, -0.892695, 0, 0)
}
point_count = 8

[sub_resource type="PlaneMesh" id="PlaneMesh_kycso"]
size = Vector2(200, 200)
subdivide_width = 50
subdivide_depth = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_clku2"]
render_priority = 0
shader = ExtResource("8_k07wl")
shader_parameter/Color = Color(0.361457, 0.509218, 0.556288, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_k07wl"]
size = Vector3(200, 1, 200)

[sub_resource type="QuadMesh" id="QuadMesh_k07wl"]
flip_faces = true
size = Vector2(512, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cllky"]
render_priority = 0
shader = ExtResource("9_hfae5")
shader_parameter/albedo_texture = ExtResource("10_clku2")
shader_parameter/opacity_texture = ExtResource("12_n0d5i")
shader_parameter/normal_texture = ExtResource("11_oavat")
shader_parameter/tint_color = Color(0.676897, 0.784936, 0.856733, 1)
shader_parameter/opacity_threshold = 0.4
shader_parameter/uv_scale_x = 40.0
shader_parameter/uv_scale_y = 2.0
shader_parameter/metallic = 0.3
shader_parameter/roughness = 0.6
shader_parameter/specular = 0.6
shader_parameter/normal_strength = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_kycso"]
size = Vector3(512, 20, 1)

[node name="GameWorld" type="Node3D"]
script = ExtResource("1_ui0sf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7rqgy")

[node name="Sunlight" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, 0.612372, -0.612372, 0, 10, 0)
light_color = Color(0.530662, 0.672657, 0.765451, 1)
shadow_enabled = true
shadow_blur = 0.0

[node name="Props" type="Node3D" parent="."]

[node name="ConcreteBlock" parent="Props" instance=ExtResource("2_cllky")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 166, 3.896, -180.737)

[node name="ConcreteBlock2" parent="Props" instance=ExtResource("2_cllky")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 162, 3.896, -180.737)

[node name="ConcreteBlock3" parent="Props" instance=ExtResource("2_cllky")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 158, 3.896, -180.737)

[node name="ConcreteBlock4" parent="Props" instance=ExtResource("2_cllky")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 154, 3.896, -180.737)

[node name="Entities" type="Node3D" parent="."]

[node name="TestPlayer" parent="Entities" instance=ExtResource("1_q75nt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.2656, 0.796838, 87.1378)
metadata/_edit_group_ = true

[node name="Decals" type="Node3D" parent="."]

[node name="BulletHole" parent="Decals" instance=ExtResource("4_30f34")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.655, 0, 98.094)
cull_mask = 1

[node name="Terrain3D" type="Terrain3D" parent="."]
data_directory = "res://Assets/Terrain3DData"
material = SubResource("Terrain3DMaterial_llaiv")
assets = SubResource("Terrain3DAssets_clku2")
collision_mode = 4
collision_mask = 4
top_level = true
metadata/_edit_lock_ = true

[node name="PlayerSpawnMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -141.042, 24, -50.272)
gizmo_extents = 1.0

[node name="RoadManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 160, 3, -180)
script = ExtResource("13_cllky")
material_resource = SubResource("StandardMaterial3D_cllky")
collision_mask = 4
metadata/_custom_type_script = "uid://duw537farqvfb"

[node name="Road_001" type="Node3D" parent="RoadManager"]
script = ExtResource("15_ytq2i")
use_lowpoly_preview = true
collision_mask = 4
edge_containers = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_targets = Array[NodePath]([NodePath("RP_002"), NodePath("")])
edge_rp_target_dirs = Array[int]([0, -1])
edge_rp_locals = Array[NodePath]([NodePath("RP_001"), NodePath("RP_008")])
edge_rp_local_dirs = Array[int]([1, 0])

[node name="RP_001" type="Node3D" parent="RoadManager/Road_001"]
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
next_pt_init = NodePath("../RP_002")

[node name="RP_002" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 32)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 16.0
next_mag = 24.0
prior_pt_init = NodePath("../RP_001")
next_pt_init = NodePath("../RP_003")

[node name="RP_003" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 82)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 24.0
next_mag = 24.0
prior_pt_init = NodePath("../RP_002")
next_pt_init = NodePath("../RP_004")

[node name="RP_004" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 128)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 24.0
next_mag = 16.0
prior_pt_init = NodePath("../RP_003")
next_pt_init = NodePath("../RP_005")

[node name="RP_005" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(0.999848, 0, 0.0174524, 0, 1, 0, -0.0174524, 0, 0.999848, 0, -0.45, 160)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 16.0
next_mag = 38.0
prior_pt_init = NodePath("../RP_004")
next_pt_init = NodePath("../RP_006")

[node name="RP_006" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(-4.37114e-08, 0.00872654, -0.999962, 0, 0.999962, 0.00872654, 1, 3.81449e-10, -4.37097e-08, -60, 0.6, 210)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 38.0
next_mag = 16.0
prior_pt_init = NodePath("../RP_005")
next_pt_init = NodePath("../RP_007")

[node name="RP_007" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -112.619, 1, 210.262)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 16.0
next_mag = 24.0
prior_pt_init = NodePath("../RP_006")
next_pt_init = NodePath("../RP_008")

[node name="RP_008" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -162.589, 0.2, 210.02)
script = ExtResource("16_4qruq")
traffic_dir = Array[int]([2, 1])
lanes = Array[int]([5, 5])
prior_mag = 24.0
next_mag = 24.0
prior_pt_init = NodePath("../RP_007")

[node name="TestGround" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false
collision_mask = 4

[node name="GroundMesh" type="MeshInstance3D" parent="TestGround"]
mesh = SubResource("BoxMesh_53j0q")
skeleton = NodePath("../..")

[node name="Col" type="CollisionShape3D" parent="TestGround"]
shape = SubResource("ConvexPolygonShape3D_53j0q")

[node name="TestWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2.393)
collision_mask = 4

[node name="Mesh" type="MeshInstance3D" parent="TestWall"]
mesh = SubResource("BoxMesh_tnnpc")

[node name="Col" type="CollisionShape3D" parent="TestWall"]
shape = SubResource("ConvexPolygonShape3D_ywpc4")

[node name="IntroPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_hfae5")

[node name="IntroPathFollow" type="PathFollow3D" parent="IntroPath"]
transform = Transform3D(0.999888, 0, 0, 0, 0.999881, 0, 0, 0, 0.999891, 203.561, 18.7906, -125.575)
rotation_mode = 0
loop = false
tilt_enabled = false

[node name="IntroCam" type="Camera3D" parent="IntroPath/IntroPathFollow"]
transform = Transform3D(-4.37163e-08, 0, 1.00011, 0, 1.00012, 0, -1.00011, 0, -4.37162e-08, 0, 0, 0)
cull_mask = 1048573
current = true
far = 256.0

[node name="IntroDoneTimer" type="Timer" parent="IntroPath/IntroPathFollow"]
one_shot = true

[node name="PrototypeMapDesign" type="Node3D" parent="."]
visible = false

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="PrototypeMapDesign"]
operation = 2

[node name="CSGGround" type="CSGBox3D" parent="PrototypeMapDesign/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0)
size = Vector3(50, 1, 20)

[node name="CSGSlope" type="CSGBox3D" parent="PrototypeMapDesign/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 0.887011, 0.461749, 0, -0.461749, 0.887011, 6.5, -3, -13.3)
size = Vector3(10, 1, 8)

[node name="Water" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 94)

[node name="WaterMesh" type="MeshInstance3D" parent="Water"]
layers = 4
mesh = SubResource("PlaneMesh_kycso")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_clku2")

[node name="Col" type="CollisionShape3D" parent="Water"]
shape = SubResource("BoxShape3D_k07wl")
debug_color = Color(1, 1, 0.223529, 1)

[node name="ChainFence1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 254)
collision_mask = 4

[node name="Mesh" type="MeshInstance3D" parent="ChainFence1"]
mesh = SubResource("QuadMesh_k07wl")
surface_material_override/0 = SubResource("ShaderMaterial_cllky")

[node name="Col" type="CollisionShape3D" parent="ChainFence1"]
shape = SubResource("BoxShape3D_kycso")
debug_color = Color(0.144307, 0.179155, 0.383279, 0.721569)

[node name="ChainFence2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 10, -254)
collision_mask = 4

[node name="Mesh" type="MeshInstance3D" parent="ChainFence2"]
mesh = SubResource("QuadMesh_k07wl")
surface_material_override/0 = SubResource("ShaderMaterial_cllky")

[node name="Col" type="CollisionShape3D" parent="ChainFence2"]
shape = SubResource("BoxShape3D_kycso")
debug_color = Color(0.144307, 0.179155, 0.383279, 0.721569)

[node name="ChainFence3" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 254, 10, 0)
collision_mask = 4

[node name="Mesh" type="MeshInstance3D" parent="ChainFence3"]
mesh = SubResource("QuadMesh_k07wl")
surface_material_override/0 = SubResource("ShaderMaterial_cllky")

[node name="Col" type="CollisionShape3D" parent="ChainFence3"]
shape = SubResource("BoxShape3D_kycso")
debug_color = Color(0.144307, 0.179155, 0.383279, 0.721569)

[node name="ChainFence4" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -254, 10, 0)
collision_mask = 4

[node name="Mesh" type="MeshInstance3D" parent="ChainFence4"]
mesh = SubResource("QuadMesh_k07wl")
surface_material_override/0 = SubResource("ShaderMaterial_cllky")

[node name="Col" type="CollisionShape3D" parent="ChainFence4"]
shape = SubResource("BoxShape3D_kycso")
debug_color = Color(0.144307, 0.179155, 0.383279, 0.721569)

[connection signal="timeout" from="IntroPath/IntroPathFollow/IntroDoneTimer" to="." method="_on_IntroDoneTimer_timeout"]
